--- a/style.css
+++ b/style.css
@@ -102,26 +102,32 @@ hr{
 }
 @media(min-width:1000px){
     .links{
-        width: 60%;
-        margin-left: 20%;
+        width: 40%;
+        margin-left: 30%;
     }
     .logo{
         margin-bottom: -1%;
         height: 35px;
         padding-right: 42%;
-        margin-left: -45%;
+        margin-left: -35%;
     }
     .gmail{
         margin-bottom: -1%;
         height: 30px;
         padding-right: 42%;
-        margin-left: -47%;
+        margin-left: -37%;
     }
     .github{
         margin-bottom: -1%;
             height: 37px;
             padding-right: 42%;
-            margin-left: -47%;
+            margin-left: -37%;
+        }
+    .linkedin{
+        margin-bottom: -1%;
+            height: 37px;
+            padding-right: 42%;
+            margin-left: -37%;
         }
         .links a{
             padding: 1%;
@@ -131,7 +137,7 @@ hr{
         }
         body{
             margin-top: 1%;
-            font-size: larger;
+            font-size: medium;
         }
         .face{
             max-height: 200px;
