--- a/style.css
+++ b/style.css
@@ -134,6 +134,7 @@ hr{
             margin-top: 1%;
             border-radius: 5px;
             padding-bottom: 2%;
+            font-size:25px;
         }
         body{
             margin-top: 1%;
