--- a/style.css
+++ b/style.css
@@ -141,10 +141,10 @@ hr{
             font-size: large;
         }
         .face{
-            max-height: 200px;
+            max-height: 150px;
             padding: 0.4%;
             border-radius: 50%;
-            margin-left: 15%;
+            margin-left: 30%;
             margin-top: 3%;
         }
         hr{
@@ -161,7 +161,7 @@ hr{
         .name{
             margin-top: 5%;
             margin-left: 6%;
-            text-align: justify;
-            margin-right: 15%;
+            text-align: left;
+            margin-right: 30%;
         }
 }
