--- a/style.css
+++ b/style.css
@@ -106,24 +106,28 @@ hr{
         margin-left: 30%;
     }
     .logo{
+        padding-top:7px;
         margin-bottom: -1%;
         height: 35px;
         padding-right: 37%;
         margin-left: -35%;
     }
     .gmail{
+        padding-top:7px;
         margin-bottom: -1%;
         height: 30px;
         padding-right: 37%;
         margin-left: -37%;
     }
     .github{
+        padding-top:7px;
         margin-bottom: -1%;
             height: 37px;
             padding-right: 37%;
             margin-left: -37%;
         }
     .linkedin{
+        padding-top:7px;
         margin-bottom: -1%;
             height: 37px;
             padding-right: 37%;
