--- a/style.css
+++ b/style.css
@@ -169,3 +169,23 @@ hr{
             margin-right: 30%;
         }
 }
+
+
+  canvas {
+    display: block;
+    vertical-align: bottom;
+  }
+  
+  
+  /* ---- particles.js container ---- */
+  
+  #particles-js {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+  }
+
+  .container{
+    position: absolute;
+  }
+
