--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     margin-top: 4%;
-    background-color: black;
+    background-color: #1c001b;
     color: white;
     font-size:40px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
