--- a/style.css
+++ b/style.css
@@ -16,6 +16,159 @@ img {
 }
 
 .logo{
+    margin-top:2%;
+    height: 100px;
+    margin-right: 30%;
+    margin-left: -0.3%;
+    border-radius: 50%;
+    transition:0.7s;
+}
+.logo:hover{
+    filter: invert(1);
+}
+
+.connect{
+    text-align: center;
+    margin-left: 3%;
+    margin-right: 3%;
+}
+.links{
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    margin-left: 5%;
+    margin-top: 5%;
+}
+.links a{
+    display:flex;
+    color: white;
+    text-decoration: none;
+    padding: 2%;
+    background-color: rgba(73, 73, 73, 0.685);
+    margin-top: 5%;
+    border-radius: 5px;
+    transition: 0.4s;
+    padding-bottom:3%;
+}
+a:hover{
+    transform: scale(1.02);
+    background-color: rgba(111, 111, 111, 0.855);
+    color: rgb(0, 0, 0);
+    transition-duration: 0.2s;
+}
+.sign{
+    opacity: 0.6;
+    font-family: "Brush Script MT";
+    text-align: center;
+    margin-top: 7%;
+    margin-bottom: 5%;
+}
+
+hr{
+    width: 50%;
+    margin-top: 7%;
+    margin-bottom: 5%;
+    color: rgb(27, 27, 27);
+    opacity: 0.7;
+}
+@media(min-width:1000px){
+    .links{
+        width: 60%;
+        margin-left: 20%;
+    }
+    .logo{
+        margin-top:4%;
+    height: 35px;
+    margin-right: 30%;
+    margin-left: 1%;
+    border-radius: 50%;
+    transition:0.7s;
+}
+
+        .links a{
+            padding: 1%;
+            margin-top: 6%;
+            border-radius: 5px;
+            padding-bottom: 2%;
+        }
+        body{
+            margin-top: 1%;
+            font-size: larger;
+        }
+        .face{
+            max-height: 200px;
+            padding: 0.4%;
+            border-radius: 10%;
+            margin-left: 15%;
+            margin-top: 3%;
+        }
+        hr{
+            width: 30%;
+            margin-top: 6%;
+            margin-bottom: 2%;
+            color: rgb(27, 27, 27);
+            opacity: 0.7;
+        }
+        .sign{
+            margin-top: 2%;
+            margin-bottom: 3%;
+        }
+        .name{
+            margin-top: 5%;
+            margin-left: 6%;
+            text-align: justify;
+            margin-right: 15%;
+        }
+        .container{
+            padding-top: 5px;
+            width: 60%;
+            margin-left: 20%;
+        }
+        .connect{
+            width: 70%;
+            margin-left: 15%;
+        }
+        .starlink{
+            margin-top: 70%;
+        }
+}
+
+#sign{
+    height: 30px;
+}
+
+  /* ---- particles.js container ---- */
+  
+  #particles-js {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+  }
+
+  .container{
+    position: absolute;
+    padding-bottom: 100px;
+  }
+
+  .starlink{
+    margin-top: -80%;
+        width: 110%;
+        -ms-transform: rotate(-30deg); /* IE 9 */
+        -webkit-transform: rotate(-30deg); /* Safari */
+        transform: rotate(-30deg); /* Standard syntax */
+        position: absolute;
+        z-index: -1000;
+  }
+
+  .iss{
+    rotate: 76deg;
+    filter: invert(1);
+  }
+
+
+/*
+.logo{
     height: 55px;
     padding-right: 33%;
     margin-left: -36%;
@@ -178,7 +331,7 @@ hr{
   
   
   /* ---- particles.js container ---- */
-  
+  /*
   #particles-js {
     position: absolute;
     width: 100%;
@@ -207,4 +360,4 @@ height:60px;
   .iss{
     rotate: 76deg;
     filter: invert(1);
-  }
+  }*/
