--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ hr{
   }
 
 
-/*
+
 .logo{
     height: 55px;
     padding-right: 33%;
@@ -331,7 +331,7 @@ hr{
   
   
   /* ---- particles.js container ---- */
-  /*
+  
   #particles-js {
     position: absolute;
     width: 100%;
@@ -360,4 +360,4 @@ height:60px;
   .iss{
     rotate: 76deg;
     filter: invert(1);
-  }*/
+  }
