--- a/style.css
+++ b/style.css
@@ -1,198 +1,3 @@
-body{
-    margin-top: 4%;
-    background-color: #020010;
-    color: white;
-    font-size:40px;
-    font-family:'Times New Roman', Times, serif;
-}
-::selection{
-    background-color: rgba(46, 65, 121, 0.542);
-    color: black;
-}
-
-img {
-    pointer-events: none;
-  -webkit-touch-callout: none;
-}
-
-.logo{
-    margin-top:2%;
-    height: 100px;
-    margin-right: 30%;
-    margin-left: 2.3%;
-    border-radius: 5%;
-    transition:0.7s;
-}
-.logo:hover{
-    filter: invert(1);
-}
-
-
-hr{
-    width: 50%;
-    margin-top: 7%;
-    margin-bottom: 5%;
-    color: rgb(27, 27, 27);
-    opacity: 0.7;
-}
-@media(min-width:1000px){
-    .links{
-        width: 60%;
-        margin-left: 20%;
-    }
-    .logo{
-        margin-top:4%;
-    height: 35px;
-    margin-right: 30%;
-    margin-left: 51%;
-    border-radius: 5%;
-    transition:0.7s;
-}
-
-       
-        body{
-            margin-top: 1%;
-            font-size: larger;
-        }
-        .face{
-            max-height: 200px;
-            padding: 0.4%;
-            border-radius: 10%;
-            margin-left: 15%;
-            margin-top: 3%;
-        }
-        hr{
-            width: 30%;
-            margin-top: 6%;
-            margin-bottom: 2%;
-            color: rgb(27, 27, 27);
-            opacity: 0.7;
-        }
-        .sign{
-            margin-top: 2%;
-            margin-bottom: 3%;
-        }
-        .name{
-            margin-top: 5%;
-            margin-left: 6%;
-            text-align: justify;
-            margin-right: 15%;
-        }
-        .container{
-            padding-top: 5px;
-            width: 60%;
-            margin-left: 20%;
-        }
-        .connect{
-            width: 70%;
-            margin-left: 15%;
-        }
-        .starlink{
-            margin-top: 70%;
-        }
-}
-
-
-  /* ---- particles.js container ---- */
-  
-  #particles-js {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-  }
-
-  .container{
-    position: absolute;
-    padding-bottom: 100px;
-  }
-
-  .starlink{
-    margin-top: -80%;
-        width: 110%;
-        -ms-transform: rotate(-30deg); /* IE 9 */
-        -webkit-transform: rotate(-30deg); /* Safari */
-        transform: rotate(-30deg); /* Standard syntax */
-        position: absolute;
-        z-index: -1000;
-  }
-
-  .iss{
-    rotate: 76deg;
-    filter: invert(1);
-  }
-
-
-
-
-.name{
-    margin-left: 6%;
-    text-align: left;
-    margin-right: 3%;
-    margin-top:5%;
-}
-.face{
-    max-height: 350px;
-    background-color: rgb(27, 27, 27);
-    padding: 1%;
-    border-radius: 50%;
-    margin-left: 3%;
-    margin-top: 4%;
-}
-.connect{
-    text-align: center;
-}
-
-@media(min-width:1000px){
-    .logo{
-        padding-top:7px;
-        margin-bottom: -1%;
-        height: 35px;
-        padding-right: 0%;
-        margin-left:5%;
-    }
-    
-        .face{
-            max-height: 175px;
-            padding: 0.4%;
-            border-radius: 50%;
-            margin-left: 30%;
-            margin-top: 3%;
-        }
-}
-
-
-  canvas {
-    display: block;
-    vertical-align: bottom;
-  }
-  
-  
-  /* ---- particles.js container ---- */
-  
-  #particles-js {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-  }
-
- 
-
-  .starlink{
-    margin-top: 85%;
-      margin-left:-10%;
-        width: 110%;
-        -ms-transform: rotate(-30deg); /* IE 9 */
-        -webkit-transform: rotate(-30deg); /* Safari */
-        transform: rotate(-30deg); /* Standard syntax */
-        position: absolute;
-        z-index: -1000;
-  }
-
-  .iss{
-    rotate: 76deg;
-    filter: invert(1);
-  }
-
 * {
     margin: 0;
     padding: 0;
@@ -207,9 +12,12 @@ body {
 
 .face {
     height: 10vh;
+    border-radius: 50%;
 }
 
 .container {
+    position: absolute;
+    top:0;
     text-align: center;
     margin-top: 8vh;
     width: 70vw;
@@ -235,6 +43,7 @@ hr {
 
 .links {
     text-align: center;
+    transform: translate(-20%);
 }
 
 .linka {
@@ -316,6 +125,7 @@ hr {
     margin-left: 25vw;
     margin-bottom: 4vh;
     font-size: 15px;
+    transform: translate(-30%);
 }
 
 /*====================ANIMATION=================*/
@@ -377,7 +187,7 @@ hr {
     }
 }
 
-@media (min-width: 800px){
+@media (max-width: 800px){
     .link{
         width: 40vw;
         margin-left: 30vw;
@@ -387,6 +197,6 @@ hr {
     }
     hr{
         width: 30vw;
-        margin-left: 10vw;
     }
 }
+
